...
        android:id="@+id/wrapper_exo_player_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/pv_step_video"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>

    <TextView
        android:id="@+id/tv_step_label_detail_desc"
...
        android:text="@string/label_step_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrapper_exo_player_view" />

    <TextView
        android:id="@+id/tv_step_detail_desc"
        style="@style/label_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
...
