<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_recipe_trace_button"
        android:title="@string/menu_item_recipe_trace_button_title"
        android:checked="false"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_turned_in_not_24"/>
</menu>