...
        android:id="@id/exo_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_to_button_exo_control_button"
        style="@style/exo_player_text"
        app:layout_constraintBottom_toBottomOf="@+id/control_view_background"
        app:layout_constraintEnd_toStartOf="@+id/exo_fullscreen_button"
        app:layout_constraintStart_toEndOf="@+id/exo_progress_placeholder"
        app:layout_constraintTop_toTopOf="@+id/control_view_background"
        tools:text="4:10" />

    <ImageButton
        android:id="@+id/exo_fullscreen_button"
...
